[package]
name = "quickball"
version = "0.1.0"
authors = ["Andrew Colannino <akcolannino@email.neit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = { git = "https://github.com/ryanisaacg/quicksilver" }
