[package]
name = "quickball"
version = "0.1.0"
authors = ["Andrew Colannino <akcolannino@email.neit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
stdweb = ["gestalt/stdweb", "platter/stdweb", "blinds/stdweb", "golem/stdweb","instant/stdweb"]

[dependencies]
quicksilver = { git = "https://github.com/ryanisaacg/quicksilver", features = ["stdweb"] }
gestalt = { version = "0.1", optional = true }
platter = "0.1"
blinds = { version = "0.1.4", default-features = false, features = ["gl", "image"] }
golem = { version = "0.1.3", features = ["std"] }
instant = "0.1.2"
